# transaction-history-integration

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: report_flows_grpc.proto  transaction_history_integration.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app.rs
src/grpc_client/: mod.rs  report_grpc_client.rs
src/grpc_server/: grpc_service.rs  mappers.rs  mod.rs  server.rs
