[package]
name = "transaction-history-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
my-grpc-extensions = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
async-trait = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.60"
serde_yaml = "*"

[build-dependencies]
tonic-build = "*"
